# chatbot-agent

./: LICENSE  README-cn.md  README.md  main.py  pyproject.toml  system_prompt.md
agents/: runtime.py
mcp_server/: mysql_server.py
memories/: name.md  preferences.md
sandbox/: opensandbox.py
skills/calculator/: SKILL.md
skills/calculator/scripts/: cal.py
skills/skill-writer/: SKILL.md
skills/skill-writer/scripts/: validate_skill.py
skills/web-downloader/: SKILL.md
skills/web-downloader/scripts/: download.py
tools/: mysql_tools.py
